Last refactoring before reorganizing modules